# src/main/java/com/pragma/powerup/infrastructure/input/rest/UserRestController.java
@@ -10,6 +10,8 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -42,5 +44,18 @@ public class UserRestController {
       @Valid @RequestBody UserRequestDto request) {
     var response = userHandler.createCustomer(request);
     return ResponseEntity.status(HttpStatus.CREATED).body(response);
+  }
+
+  @GetMapping("/{id}")
+  public ResponseEntity<UserResponseDto> getUserById(@PathVariable Long id) {
+    var response = userHandler.getUserById(id);
+    return ResponseEntity.ok(response);
+  }
+
+  @GetMapping("/{userId}/restaurant/{restaurantId}/is-employee")
+  public ResponseEntity<Boolean> isEmployeeOfRestaurant(
+      @PathVariable Long userId, @PathVariable Long restaurantId) {
+    boolean isEmployee = userHandler.isEmployeeOfRestaurant(userId, restaurantId);
+    return ResponseEntity.ok(isEmployee);
   }
 }
